# superapp

./: .gitignore  AUDIT_RECOMMENDATIONS.md  CURSOR_SETUP_PROMPT.md  Procfile  README_dashboard.md  SUPERAPP_CONTEXT.md  WIKI_DASHBOARD_SPEC.md  debug_git_path.py  launch_dashboard.py  main.py  project_onboarding.py  pyproject.toml  railway.toml  requirements.txt  requirements_backup.txt  requirements_dashboard.txt  requirements_minimal.txt  superapp_dashboard.py  superapp_dashboard_OLD.py  superapp_muscle_memory.py  test_feed_generator.py  test_git_sync.py  test_ui_components.py  test_wiki_parser.py  todos.json  user_roles_plan.md  wiki_dashboard_main.py
.streamlit/: config.toml
dashboard_assets/: styles.css
smart-agentic-folders/: README.md  SMART_AGENTIC_PROJECT_SETUP.md  project_onboarding.py  template_muscle_memory.py  template_requirements.txt
wiki_engine/: __init__.py  card_components.py  feed_generator.py  git_sync.py  wiki_parser.py
